[package]
name = "inscenerator-xfs"
version = "0.1.4"
authors = ["Michael Anderson <drmikeando@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Filesystem abstraction for Inscenerator"
homepage = "https://github.com/mikeando/inscenerator-xfs"
repository = "https://github.com/mikeando/inscenerator-xfs"
readme = "README.md"

[dependencies]
snafu = "0.7"

[dev-dependencies]
tempfile = "3.2"
